logs/to_posgrest_v4.2/read_and_load_user/2023-03-20T15:35:27.529831+00:00/1.log
[2023-03-20 15:39:01,311] {taskinstance.py:1032} INFO - Dependencies all met for <TaskInstance: to_posgrest_v4.2.read_and_load_user manual__2023-03-20T15:35:27.529831+00:00 [queued]>
[2023-03-20 15:39:01,370] {taskinstance.py:1032} INFO - Dependencies all met for <TaskInstance: to_posgrest_v4.2.read_and_load_user manual__2023-03-20T15:35:27.529831+00:00 [queued]>
[2023-03-20 15:39:01,371] {taskinstance.py:1238} INFO - 
--------------------------------------------------------------------------------
[2023-03-20 15:39:01,372] {taskinstance.py:1239} INFO - Starting attempt 1 of 2
[2023-03-20 15:39:01,373] {taskinstance.py:1240} INFO - 
--------------------------------------------------------------------------------
[2023-03-20 15:39:01,480] {taskinstance.py:1259} INFO - Executing <Task(PostgresOperator): read_and_load_user> on 2023-03-20 15:35:27.529831+00:00
[2023-03-20 15:39:01,492] {standard_task_runner.py:52} INFO - Started process 11544 to run task
[2023-03-20 15:39:01,500] {standard_task_runner.py:76} INFO - Running: ['***', 'tasks', 'run', 'to_posgrest_v4.2', 'read_and_load_user', 'manual__2023-03-20T15:35:27.529831+00:00', '--job-id', '61', '--raw', '--subdir', 'DAGS_FOLDER/to_postgresql.py', '--cfg-path', '/tmp/tmp0h4x08g0', '--error-file', '/tmp/tmpbp_mi1yk']
[2023-03-20 15:39:01,503] {standard_task_runner.py:77} INFO - Job 61: Subtask read_and_load_user
[2023-03-20 15:39:01,861] {logging_mixin.py:109} INFO - Running <TaskInstance: to_posgrest_v4.2.read_and_load_user manual__2023-03-20T15:35:27.529831+00:00 [running]> on host 0b4cdb459521
[2023-03-20 15:39:02,187] {taskinstance.py:1426} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=sakabuana31
AIRFLOW_CTX_DAG_ID=to_posgrest_v4.2
AIRFLOW_CTX_TASK_ID=read_and_load_user
AIRFLOW_CTX_EXECUTION_DATE=2023-03-20T15:35:27.529831+00:00
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-03-20T15:35:27.529831+00:00
[2023-03-20 15:39:02,269] {base.py:79} INFO - Using connection to: id: postgres_localhost. Host: host.docker.internal, Port: 5432, Schema: final, Login: ***, Password: ***, extra: {}
[2023-03-20 15:39:02,361] {dbapi.py:225} INFO - Running statement: 
            CREATE TEMPORARY TABLE temp_user (
                user_id text PRIMARY KEY,
                name text,
                review_count text,
                useful int,
                funny int,
                cool int,
                elite int,
                friends text,
                fans text,
                average_stars int,
                yelping_since_values date
            );

            COPY temp_user FROM '/opt/***/data/output-csv/business_restaurant.csv' DELIMITER ',' CSV HEADER;
            INSERT INTO user (user_id, name, review_count, useful, funny, cool, elite, friends, fans, average_stars, yelping_since_values)
            SELECT user_id, name, review_count, useful, funny, cool, elite, friends, fans, average_stars, yelping_since_values
            FROM temp_user
            ON CONFLICT (user_id) DO NOTHING;
        , parameters: None
[2023-03-20 15:39:02,404] {taskinstance.py:1700} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1329, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1455, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1511, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 69, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 205, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 229, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "user"
LINE 17:             INSERT INTO user (user_id, name, review_count, u...
                                 ^

[2023-03-20 15:39:02,625] {taskinstance.py:1277} INFO - Marking task as UP_FOR_RETRY. dag_id=to_posgrest_v4.2, task_id=read_and_load_user, execution_date=20230320T153527, start_date=20230320T153901, end_date=20230320T153902
[2023-03-20 15:39:02,695] {standard_task_runner.py:92} ERROR - Failed to execute job 61 for task read_and_load_user
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/task/task_runner/standard_task_runner.py", line 85, in _start_by_fork
    args.func(args, dag=self.dag)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/cli_parser.py", line 48, in command
    return func(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/cli.py", line 92, in wrapper
    return f(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 298, in task_run
    _run_task_by_selected_method(args, dag, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 107, in _run_task_by_selected_method
    _run_raw_task(args, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 184, in _run_raw_task
    error_file=args.error_file,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/session.py", line 70, in wrapper
    return func(*args, session=session, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1329, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1455, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1511, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 69, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 205, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 229, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "user"
LINE 17:             INSERT INTO user (user_id, name, review_count, u...
                                 ^

[2023-03-20 15:39:02,739] {local_task_job.py:154} INFO - Task exited with return code 1
[2023-03-20 15:39:02,988] {local_task_job.py:264} INFO - 0 downstream tasks scheduled from follow-on schedule check
